# TFG-deps

./: .gitignore  README.md  build.sh  nginx.conf
benchmarks/: Cargo.toml
benchmarks/benches/: decrypt_ballots.rs  sum_ballots.rs
benchmarks/benches/common/: mod.rs
benchmarks/scripts/: main.ipynb  main.py  requirements.txt
benchmarks/src/: _elgamal.rs  ballot.rs  bfv.rs  elgamal.rs  lib.rs
blockchain-k3-playbook/: ansible.cfg  inventory.yml
blockchain-k3-playbook/playbooks/: deploy.yml  kurtosis.yml  reset.yml  site.yml
blockchain-k3-playbook/roles/config/tasks/: format-disk.yaml  main.yaml  restart.yaml  setup-admin.yaml
blockchain-k3-playbook/roles/config/vars/: main.yaml
blockchain-k3-playbook/roles/infra/tasks/: create-disk.yaml  create-vm.yaml  main.yaml
blockchain-k3-playbook/roles/infra/vars/main/: creds.yaml  main.yaml
blockchain-k3-playbook/roles/kurtosis/files/: kurtosis-config.yml  network_params.yaml
blockchain-k3-playbook/roles/kurtosis/tasks/: install.yaml  main.yaml
blockchain-k3-playbook/roles/kurtosis/vars/: main.yaml
client_lib/: Cargo.toml
client_lib/src/: ballots.rs  blind_signatures.rs  ecc.rs  errors.rs  lib.rs  signatures.rs
client_lib/tests/: ballots.rs  blind_signatures.rs  ecc.rs  signatures.rs
custom-reth/: Cargo.toml  Dockerfile  recipe.json
custom-reth/src/: main.rs
geth-precompiled/: Cargo.toml
geth-precompiled/src/: main.rs
primitives/: Cargo.toml  visualize_benchmarks.py
primitives/src/: ballots.rs  blind_signatures.rs  ecc.rs  lib.rs  secret_sharing.rs  signatures.rs
primitives/tests/: ballots_stress_tests.rs  ballots_tests.rs  blind_signatures_tests.rs  ecc_tests.rs  signatures_tests.rs
server_lib/: Cargo.toml  index.d.ts  index.js  package.json
server_lib/src/: ballots.rs  ecc.rs  lib.rs  signatures.rs
server_lib/tests/: ballots_flow.rs  blind_signatures_flow.rs  ecc_flow.rs
