[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
Cupcake = "0.2.1"
bincode = "1.3.3"
criterion = "0.5.1"
elastic-elgamal = {version="0.3.1", features=["serde"]}
rand = "0.8.0"
serde = "1.0.219"
serde_json = "1.0.140"

[[bench]]
name = "decrypt_ballots"
harness = false

[[bench]]
name = "sum_ballots"
harness = false
