[package]
name = "blind_signatures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
serde_json = "1.0.115"
elastic-elgamal = { version = "0.3.0", features = ["serde"] }
blind-rsa-signatures = "0.15.0"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }
rsa = {version = "0.9.6", features = ["sha2"]}
ecies = {version = "0.2.6", default-features= false, features = ["pure"]}
once_cell = {version = "1.18.0", default-features = false, features = ["std"]}