[package]
name = "blind_signatures"
version = "0.1.0"
edition = "2021"
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.108"
primitives = { path = "../primitives" }
js-sys = "0.3.85"

[dev-dependencies]
ecies = { version = "0.2.10", default-features= false, features = ["pure"] }
alloy-sol-types = "1.5.3"
alloy-primitives = "1.5.3"
hex = "0.4.3"
