[[bin]]
path = "src/main.rs"
name = "custom-reth"
plugin = false
proc-macro = false
edition = "2021"
required-features = []

[package]
name = "custom-reth"
edition = "2021"
version = "0.0.1"

[dependencies]
eyre = "0.6"

[dependencies.alloy-consensus]
version = "0.9.2"
default-features = false

[dependencies.alloy-genesis]
version = "0.9.2"
default-features = false

[dependencies.alloy-primitives]
version = "0.8.15"
features = ["map-foldhash"]
default-features = false

[dependencies.reth]
git = "https://github.com/paradigmxyz/reth.git"

[dependencies.reth-chainspec]
git = "https://github.com/paradigmxyz/reth.git"
default-features = false

[dependencies.reth-evm]
git = "https://github.com/paradigmxyz/reth.git"

[dependencies.reth-evm-ethereum]
git = "https://github.com/paradigmxyz/reth.git"

[dependencies.reth-node-api]
git = "https://github.com/paradigmxyz/reth.git"

[dependencies.reth-node-core]
git = "https://github.com/paradigmxyz/reth.git"

[dependencies.reth-node-ethereum]
git = "https://github.com/paradigmxyz/reth.git"
features = ["test-utils"]

[dependencies.reth-primitives]
git = "https://github.com/paradigmxyz/reth.git"
default-features = false

[dependencies.reth-tracing]
git = "https://github.com/paradigmxyz/reth.git"

[dependencies.tokio]
version = "1.39"
default-features = false
