[package]
name = "geth-precompiled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elastic-elgamal = { version = "0.3.0", features = ["serde"] }
serde_json = "1.0.116"
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.22.1"
