[package]
name = "primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.1.0"
alloy-sol-types = "1.1.0"
bincode = "1.3"
blind-rsa-signatures = "0.15.2"
ecies = {version = "0.2.6", default-features= false, features = ["pure"]}
elastic-elgamal = { version = "0.3.1", features = ["serde"] }
rand = "0.8.5"
rsa = { version = "0.9.8", features = ["sha2"]}
getrandom = { version = "0.2", features = ["js"] }
once_cell = {version = "1.18.0", default-features = false, features = ["std"]}
sharks = "0.5.0"
