[package]
name = "primitives"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
alloy-primitives = "1.5.3"
alloy-sol-types = "1.5.3"
postcard = { version = "1.1.3", features = ["alloc"] }
blind-rsa-signatures = "0.17.0"
ecies = { version = "0.2.10", default-features= false, features = ["pure"] }
elastic-elgamal = { version = "0.3.1", features = ["serde"] }
rsa = { version = "0.9.10", features = ["sha2"]}
sharks = "0.5.0"
heapless = "0.9.2"
rand_legacy = { package = "rand", version = "0.8.3" }
getrandom = { version = "0.4.0-rc.1", default-features=false, features = ["wasm_js"] }
critical-section = { version = "1.1", features = ["std"] }

[profile.release]
lto = true
codegen-units = 1
