
[package]
authors = ["Javier Padilla"]
edition = "2021"
name = "server_utilities"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
primitives = { path = "../primitives" }
# once_cell = {version = "1.18.0", default-features = false, features = ["std"]}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
